<resources>
    <string name="app_name">View &amp; Resources</string>
    <string name="name_hint">Name</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="select_hint">Select</string>
    <string name="address_hint">Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="zip_hint">Zip</string>
    <string name="birthday_hint">Birthday</string>
    <string name="notes_hint">Notes</string>
    <string name="items_count_in_your_cart">%s items in your cart</string>
    <string name="order_total">Your order total</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="caption">Caption</string>
    <string name="item_price">$US, %s</string>
    <string name="tax">Tax</string>
    <string name="gingerbread">Gingerbread</string>
    <string name="honeycomb">Honeycomb</string>
    <string name="oreo">Oreo</string>
    <string name="donut">Donut</string>
    <string name="lollipop">Lollipop</string>
    <string name="pay_now_button">Pay now</string>
    <string name="e_mail_label">E-mail</string>
    <string name="e_mail_stub">e.g. john@gmail.com</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="password_stub">* * * * * *</string>
    <string name="register_button">Register</string>
    <string name="sign_in_button">Sign in</string>
    <string name="password_label">Password</string>
</resources>