<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/sign_in_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_text_input_layout"
        android:layout_marginStart="@dimen/start_end_margin_16dp"
        android:layout_marginVertical="@dimen/top_bottom_margin_24dp"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/start_end_margin_16dp"
        android:text="@string/register_button"
        android:textColor="@color/blue_400"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/sign_in_text_view"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_text_view"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/start_end_margin_16dp"
        android:layout_marginVertical="@dimen/start_end_margin_16dp"
        android:hint="@string/e_mail_label"
        app:hintTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/sign_in_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_text_input_layout">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_stub"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/start_end_margin_16dp"
        android:hint="@string/password_label"
        app:hintTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/email_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reset_password_button">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_stub"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_my_password"
        android:textColor="@color/blue_400"
        android:layout_marginEnd="@dimen/start_end_margin_16dp"
        android:layout_marginVertical="@dimen/top_bottom_margin_24dp"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/start_end_margin_16dp"
        android:layout_marginBottom="@dimen/top_bottom_margin_24dp"

        app:layout_constraintTop_toBottomOf="@id/reset_password_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sign_in_button"
        android:backgroundTint="@color/blue_400"
        />

</androidx.constraintlayout.widget.ConstraintLayout>